--- a/MyCompany.Service/MyCompany.Service.csproj
+++ b/MyCompany.Service/MyCompany.Service.csproj
@@ -1,8 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.4" />
+    <PackageReference Include="ServiceStack" Version="5.8.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.6.0" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\MyCompany.Core\MyCompany.Core.csproj" />
